ログをファイルとして保存するようにした / ログを親切にした

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
 # SLOWMO = 50
+
+### 「会員メニュー用パスワードでログイン」
+# NANACO_NUMBER = 1234567890123456
+# NANACO_PASSWORD = abcd1234
+
+### 「カード記載の番号でログイン」
 # NANACO_NUMBER = 1234567890123456
 # NANACO_SECCODE = 1234567
-# NANACO_PASSWORD = abcd1234
