--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "dotenv": "^6.2.0",
+    "log4js": "^3.0.6",
     "puppeteer": "^1.11.0",
     "request": "^2.88.0",
     "yargs": "^12.0.5"
